Add promote CI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,8 +26,61 @@ jobs:
       - run:
           command: find . -type f -name '*.yml' | xargs yamllint
 
+  tag:
+    <<: *defaults
+    steps:
+      - checkout
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run:
+          name: prepare git
+          command: |
+            git config user.email "${GIT_USER_EMAIL}"
+            git config user.name "CircleCI Bot"
+            git config merge.ours.driver true
+      - run:
+          name: tag
+          command: |
+            current_version=$(git-current-tag.sh)
+            new_version=$(increment-version.sh $current_version)
+            echo "Tagging to ${new_version}"
+            git tag -a "$new_version" -m "$new_version"
+            git push origin --tags
+
+  deploy:
+    <<: *defaults
+    steps:
+      - checkout
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run: activate-gcloud-account.sh
+
 
 workflows:
   branch:
     jobs:
       - lint
+      - hold-promote:
+          type: approval
+          requires:
+            - lint
+          filters:
+            branches:
+              only: main
+      - tag:
+          context: org-global
+          requires:
+            - hold-promote
+          filters:
+            branches:
+              only: main
+
+  tag:
+    jobs:
+      - deploy:
+          context: org-global
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
