--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,7 +59,8 @@ jobs:
               --runtime python39 \
               --trigger-http \
               --source ./src/ \
-              --project $GOOGLE_PROJECT_ID
+              --project $GOOGLE_PROJECT_ID \
+              --set-env-vars CIRCLE_TOKEN=${CIRCLE_TOKEN}
 
 workflows:
   branch:
@@ -72,15 +73,13 @@ workflows:
           filters:
             branches:
               only: main
-      - deploy:
+      - tag:
           context: org-global
           requires:
             - hold-promote
           filters:
             branches:
               only: main
-      - deploy:
-          context: org-global
 
   tag:
     jobs:
