Revert "Add context to lint job"
This reverts commit 445ba91764e282272068bc90570a3ab95b0a1fc9.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,8 @@ jobs:
   lint:
     <<: *defaults
     steps:
+      - setup_remote_docker:
+          docker_layer_caching: true
       - checkout
       - run:
           name: lint
@@ -55,8 +57,7 @@ jobs:
 workflows:
   branch:
     jobs:
-      - lint:
-          context: org-global
+      - lint
       - hold-promote:
           type: approval
           requires:
